css/main.css
/* ... */
.typing span {
    content: '';
    animation: blink 1.5s infinite;
    animation-fill-mode: both;
    height: 10px;
    width: 10px;
    background: #3b5998;;
    position: absolute;
    left:0;
    top:0;
    border-radius: 50%;
}

.typing .dot1 {
    animation-delay: .2s;
    margin-left: calc(10px * 1.5);
}

.typing .dot2 {
    animation-delay: .4s;
    margin-left: calc(10px * 3);
}

@keyframes blink {
    0% {
        opacity: .1;
    }

    20% {
        opacity: 1;
    }

    100% {
        opacity: .1;
    }
}

#chat-tab .generating {
    display: none !important;
}

.hover-element {
    position: relative;
    font-size: 24px;
}

.hover-menu {
    display: none;
    position: absolute;
    bottom: 80%;
    left: 0;
    box-shadow: 0 0 5px rgb(0 0 0 / 25%);
    z-index: 10000;
    min-width: 330px;
    flex-direction: column;
}

.hover-menu button {
    width: 100%;
    background: white !important;
    border-radius: 0 !important;
    justify-content: space-between;
    margin: 0 !important;
    height: 36px;
    border-color: transparent !important;
}

.hover-menu button:not(#clear-history-confirm) {
    border-bottom: 0 !important;
}

.hover-menu button:hover {
    background: #dbeafe !important;
}

.dark .hover-menu button:hover {
    background: var(--selected-item-color-dark) !important;
}

#show-controls {
    background-color: white;
    border-color: transparent !important;
    height: 36px;
    border-radius: 0;
    border-bottom: 0 !important;
    padding-top: 3px;
    padding-left: 4px;
    display: flex;
    font-weight: normal;
}

.dark #show-controls {
    background-color: var(--darker-gray);
}

#show-controls label {
    display: flex;
    flex-direction: row-reverse;
    justify-content: start;
    width: 100%;
    padding-right: 12px;
    gap: 10px;
    font-weight: 600;
    color: var(--button-secondary-text-color);
}

#show-controls label input {
    margin-top: 4px;
}

.transparent-substring {
    opacity: 0.333;
}

#chat-tab #chat-buttons {
    display: none !important;
}

#gr-hover-container {
    min-width: 0 !important;
    display: flex;
    flex-direction: column-reverse;
    padding-right: 20px;
    padding-bottom: 3px;
    flex-grow: 0 !important;
}

#generate-stop-container {
    min-width: 0 !important;
    display: flex;
    flex-direction: column-reverse;
    padding-bottom: 3px;
    flex: 0 auto !important;
}

#chat-input-container {
    display: flex;
    flex-direction: column;
    min-width: 0 !important;
}

#chat-input-container > .form {
    background: transparent;
    border: none;
}

#chat-input-row {
    padding: 1rem;
}

#chat-col {
    height: 100dvh;
    display: flex;
    flex-direction: column;
    padding-bottom: 0;
    gap: 0;
}

@media screen and (width <= 924px) {
    #chat-col {
        margin-top: 32px;
        height: calc(100dvh - 32px);
    }
}

.message-body ol, .message-body ul {
    margin-top: 0 !important;
    margin-bottom: 1.25em !important;
}

/* ----------------------------------------------
  Past chats menus
---------------------------------------------- */
#rename-row label {
    margin-top: 0;
}

#rename-row > :nth-child(2) {
    justify-content: center;
}

/* ----------------------------------------------
  Create the sidebars
---------------------------------------------- */
#chat-controls,
#past-chats-row {
    width: 260px;
    max-width: 80vw;
    padding: 0.5rem;
    height: 100dvh;
    flex-shrink: 0;
    box-sizing: content-box;
    z-index: 10;
}

#past-chats-row:not(.negative-header) {
    max-width: calc(85vw - var(--header-width));
}

#chat-controls {
    padding: 1rem;
    padding-bottom: 0;
    overflow-y: scroll;
}

#chat-controls > :nth-child(1) {
    padding: 0.5rem;
}

#past-chats-row + * {
    width: unset;
    flex-grow: 1;
    flex-shrink: 1;
}

#search_chat {
    padding-right: 0.5rem;
}

#search_chat > :nth-child(2) > :first-child {
    display: none;
}

/* ----------------------------------------------
  Keep dropdown menus above errored components
---------------------------------------------- */
.options {
    z-index: 100 !important;
    border: 1px solid var(--input-border-color);
    border-radius: 0;
}

/* ----------------------------------------------
  Big profile picture for characters
---------------------------------------------- */
.bigProfilePicture {
    position: fixed;
    bottom: 0;
    left: 0;
    width: calc(0.5 * (100vw - min(100vw, 48rem) - (120px - var(--header-width))));
    z-index: 10000;
}

.pfp_character {
    position: relative;
}

.pfp_character:hover {
    cursor: pointer;
}

@media screen and (width <= 1300px) {
    .bigProfilePicture {
        display: none;
    }
}

#past-chats {
    max-height: calc(100dvh - 135px);
    overflow-y: scroll !important;
    border-radius: 0;
    scrollbar-width: auto;
}

#past-chats::-webkit-scrollbar {
    display: block;
}

#past-chats label {
    width: 100%;
    background-color: transparent !important;
    background: none;
    border: 0;
    border-radius: 0;
    padding-top: 8px;
    padding-bottom: 8px;
    position: relative;
    min-height: 42px !important;
}

#past-chats label::before {
    content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 9h8"></path><path d="M8 13h6"></path><path d="M18 4a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-5l-5 3v-3h-2a3 3 0 0 1 -3 -3v-8a3 3 0 0 1 3 -3h12z"></path></svg>');
    position: absolute;
    top: 12px;
    left: 12px;
    margin-right: 8px;
}
/* ... */

